--- a/argo/kankino.yaml
+++ b/argo/kankino.yaml
@@ -26,4 +26,4 @@ spec:
           - name: IMAGE_NAME
             value: 'nilofe/go'
           - name: GIT_TOKEN_SECRET
-            value: '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'
+            value: 'git-token'
