--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -14,11 +14,8 @@ jobs:
         with:
           go-version: '1.18'
 
-      - name: Cambiar de carpeta
-        run: cd go-test/
-
       - name: Descargar módulos
-        run: go mod download
+        run: cd go-test/ ; go mod download
 
       - name: Build
         run: go build -o ./app/main
