update actions ci-go 2

--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -18,7 +18,7 @@ jobs:
         run: cd go-test/ ; go mod download
 
       - name: Build
-        run: go build -o ./app/main
+        run: go build -o main
 
       - name: Hecho
         run: echo "goosd"
