--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -14,11 +14,11 @@ jobs:
         with:
           go-version: '1.18'
 
-      - name: Descargar módulos
-        run: cd go-test/ ; go mod download
-
       - name: Build
-        run: go mod init
+        run: go build -v ./...
+
+      - name: Test
+        run: go test
 
       - name: Hecho
         run: echo "goosd"
