--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -18,7 +18,7 @@ jobs:
           go-version: '1.18'
 
       - name: Build
-        run: pwd ; go build -v ./...
+        run: pwd 
         working-directory: ${{env.working-directory}}
       
       - name: Test
