--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -18,11 +18,11 @@ jobs:
           go-version: '1.18'
 
       - name: Build
-        run: pwd 
+        run: go build
         working-directory: ${{env.working-directory}}
       
       - name: Test
-        run: go test -v ./...
+        run: go test ./...
         working-directory: ${{env.working-directory}}
 
       - name: Hecho
