--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -17,10 +17,13 @@ jobs:
         with:
           go-version: '1.18'
 
-      - name: Build
-        run: go build
+      - name: Install dependencies
+        run: |
+          go version
+          go mod init
+          go mod verify
         working-directory: ${{env.working-directory}}
-      
+
       - name: Test
         run: go test ./...
         working-directory: ${{env.working-directory}}
